--- a/index.html
+++ b/index.html
@@ -34,33 +34,38 @@
                 </div>
                 <div class="scroll">
                     <div class="icon-scroll"></div>
-                    <span>scroll down</span>
+                    <span>Scroll Down</span>
                 </div>
                 <div class="name">
                     Kim Sun A
                 </div>
             </section>
             <section class="about">
+                <div class="bookmark"></div>
                 <div class="section-title">
                     About
                 </div>
-                 <div class="about-wrap">
+                <div class="about-circle"></div>
+               <div class="about-wrap">
+                    <i class="fa-solid fa-quote-left"></i>
+                    <div class="about-me">
+                        <h2>Sminun;</h2>
+                        <p>안녕하세요,<br>어느 곳이나 잘 스며들어 어울리는 김선아 입니다.<br> 모르는 것은 열심히 배우고자 하고 의사소통에 귀 기울기겠습니다.</p>
+                    </div>
                     <div class="profile">
                         <img src="./image/미모티콘.png" alt="memoji">
-                        <div>
-                            <h3>Kim Sun A</h3>
-                            <p>
-                               <div>1999.01.04</div>
-                               <div>010 2652 3106</div>
-                               <div>tjsdk1260@gmail.com</div>
-                            </p>
+                        <div class="profile-contact">
+                            <h4>김선아</h4>
+                            <div>1999.01.04</div>
+                            <div>010 2652 3106</div>
+                            <div>tjsdk1260@gmail.com</div>
                         </div>
                     </div>
-                    <div>
+                    <div class="about-contents">
                         <ul class="about-list">
-                            <li class="education">
+                            <li>
                                 <h3>Education</h3>
-                               <div>
+                                <div>
                                     <h4>2014.03 - 2017.02</h4>
                                     <p>영주여자고등학교 졸업</p>
                                     </div>
@@ -72,8 +77,27 @@
                                     <h4>2022.03 - 2023.02</h4>
                                     <p>SBS아카데미컴퓨터학원 수료</p>
                                 </div>
-                            </li> 
-                            <li class="Certificate">
+                            </li>
+                            <li>
+                                <h3>Experience</h3>
+                                <div>
+                                    <h4>2019</h4>
+                                    <p>지역 청년 아이디어 챌린지 프로그램 예선 장려상 수상</p>
+                                </div>
+                                <div>
+                                    <h4>2020</h4>
+                                    <p>영남대학교 생활제품디자인학과 졸업 전시회</p>
+                                </div>
+                                <div>
+                                    <h4>2021.03 - 2021.07</h4>
+                                    <p>SK스페셜티 사무보조</p>
+                                </div>
+                                <div>
+                                    <h4>2021.08 - 2022.05</h4>
+                                    <p>삭스어필(주) 그래픽 디자이너</p>
+                                </div>
+                            </li>
+                            <li>
                                 <h3>Certificate</h3>
                                 <div>
                                     <h4>2010.08</h4>
@@ -92,26 +116,6 @@
                                     <p>웹디자인 기능사 필기</p>
                                 </div>
                             </li>
-                            <li class="experience">
-                                 <h3>Experience</h3>
-                               <div>
-                                    <h4>2019</h4>
-                                    <p>지역 청년 아이디어 챌린지 프로그램 예선 장려상 수상</p>
-                                </div>
-                                <div>
-                                    <h4>2020</h4>
-                                    <p>영남대학교 생활제품디자인학과 졸업 전시회</p>
-                                </div>
-                                <div>
-                                    <h4>2021.03 - 2021.07</h4>
-                                    <p>SK스페셜티 사무보조</p>
-                                </div>
-                                <div>
-                                    <h4>2021.08 - 2022.05</h4>
-                                    <p>삭스어필(주) 그래픽 디자이너</p>
-                                </div>
-                            </li>
-                           
                             <li class="skills">
                                 <h3>Skills</h3>
                                 <div>
@@ -123,27 +127,82 @@
                                     <div>Javascript</div>
                                 </div>
                             </li>
-                         </ul>
-                    </div>            
+                        </ul>
+                    </div>
+               </div>
             </section>
             <section class="portfolio">
-                <div class="number">01</div>
-                <div class="section-title">
-                    Arcteryx
-                </div>
-                <div class="portfolio-content">
-                    <a href="">사이트 바로가기</a>
-                    <p class="introduce">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex incidunt eos similique aspernatur esse fugit ea doloribus error architecto voluptas quisquam quasi, natus culpa voluptate ut neque itaque mollitia? Vel?
-                    </p>
-                </div>
-                <div class="mockup">
-                    <img src="" alt="">
-                </div>
+                <article class="Arcteryx">
+                    <div class="number">01</div>
+                    <div class="section-title">
+                        Arc'teryx
+                    </div>
+                    <div class="portfolio-content">
+                        <a href="https://tjsdk1260.github.io/arcteryx/" target="_blank" id="clickBtn">Shortcut</a>
+                        <p class="introduce">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex incidunt eos similique aspernatur esse fugit ea doloribus error architecto voluptas quisquam quasi, natus culpa voluptate ut neque itaque mollitia? Vel?
+                            적응형으로 제작하였습니다.
+                        </p>
+                    </div>
+                    <div class="mockup">
+                        <img src="" alt="">
+                    </div>
+                </article>
+                <article class="nonfiction">
+                    <div class="number">02</div>
+                    <div class="section-title">
+                        Nonfiction
+                    </div>
+                    <div class="portfolio-content">
+                        <label for="modal" class="button">Storyboard</label>
+                        <input type="checkbox" id="modal" class="hidden">
+                        <div class="box-modal">
+                            <label for="modal" class="closer">X</label>
+                            <div class="storyboard">
+                                <img src="" alt="">
+                            </div>
+                        </div>
+                        <a href="https://tjsdk1260.github.io/Nonfiction/" target="_blank" id="clickBtn">Shortcut</a>
+                        <p class="introduce">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex incidunt eos similique aspernatur esse fugit ea doloribus error architecto voluptas quisquam quasi, natus culpa voluptate ut neque itaque mollitia? Vel?
+                        </p>
+                    </div>
+                    <div class="mockup">
+                        <img src="" alt="">
+                    </div>
+                </article>
+                <article class="national">
+                    <div class="number">03</div>
+                    <div class="section-title">
+                        국립재난안전연구원
+                    </div>
+                    <div class="portfolio-content">
+                        <label for="modal" class="button">Storyboard</label>
+                        <input type="checkbox" id="modal" class="hidden">
+                        <div class="box-modal">
+                            <label for="modal" class="closer">X</label>
+                            <div class="storyboard">
+                                <img src="" alt="">
+                            </div>
+                        </div>
+                        <a href="https://tjsdk1260.github.io/National-Disaster-and-Safety-Research-Institute/" target="_blank" id="clickBtn">Shortcut</a>
+                        <p class="introduce">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex incidunt eos similique aspernatur esse fugit ea doloribus error architecto voluptas quisquam quasi, natus culpa voluptate ut neque itaque mollitia? Vel?
+                            기존 노후된 사이트를 리 디자인 하였습니다. 반응형으로 제작되었습니다.
+                        </p>
+                    </div>
+                    <div class="mockup">
+                        <img src="" alt="">
+                    </div>
+                </article>
             </section>
         </main>
         <footer class="contact">
             <!-- <a href="https://github.com/tjsdk1260" target="_blank"><i class="fa-brands fa-github"></i></a> -->
+            <div class="go-top">
+                <i class="fa-solid fa-arrow-up"></i>
+                <div>Back to Top</div>
+            </div>
         </footer>
     </div>
     <script src="index.js"></script>
