--- a/index.html
+++ b/index.html
@@ -132,13 +132,21 @@
                </div>
             </section>
             <section class="portfolio">
-                <article class="Arcteryx">
+                <article class="arcteryx">
                     <div class="number">01</div>
                     <div class="section-title">
                         Arc'teryx
                     </div>
+                    <div class="color color-1">
+                        <div></div>
+                        <div></div>
+                    </div>
                     <div class="portfolio-content">
-                        <a href="https://tjsdk1260.github.io/arcteryx/" target="_blank" id="clickBtn">Shortcut</a>
+                        <a href="https://tjsdk1260.github.io/arcteryx/" target="_blank" id="clickBtn">사이트 바로가기</a>
+                        <div class="tool">
+                            Illustrator, Visual Stoudio Code
+                        </div>
+                        <div>참여도 100%</div>
                         <p class="introduce">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex incidunt eos similique aspernatur esse fugit ea doloribus error architecto voluptas quisquam quasi, natus culpa voluptate ut neque itaque mollitia? Vel?
                             적응형으로 제작하였습니다.
@@ -153,8 +161,12 @@
                     <div class="section-title">
                         Nonfiction
                     </div>
+                    <div class="color">
+                        <div></div>
+                        <div></div>
+                    </div>
                     <div class="portfolio-content">
-                        <label for="modal" class="button">Storyboard</label>
+                        <label for="modal" class="button">스토리보드</label>
                         <input type="checkbox" id="modal" class="hidden">
                         <div class="box-modal">
                             <label for="modal" class="closer">X</label>
@@ -162,7 +174,11 @@
                                 <img src="" alt="">
                             </div>
                         </div>
-                        <a href="https://tjsdk1260.github.io/Nonfiction/" target="_blank" id="clickBtn">Shortcut</a>
+                        <a href="https://tjsdk1260.github.io/Nonfiction/" target="_blank" id="clickBtn">사이트 바로가기</a>
+                        <div class="tool">
+                            Illustrator, Visual Stoudio Code
+                        </div>
+                        <div>참여도 100%</div>
                         <p class="introduce">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex incidunt eos similique aspernatur esse fugit ea doloribus error architecto voluptas quisquam quasi, natus culpa voluptate ut neque itaque mollitia? Vel?
                         </p>
@@ -176,8 +192,12 @@
                     <div class="section-title">
                         국립재난안전연구원
                     </div>
+                    <div class="color">
+                        <div></div>
+                        <div></div>
+                    </div>
                     <div class="portfolio-content">
-                        <label for="modal" class="button">Storyboard</label>
+                        <label for="modal" class="button">스토리보드</label>
                         <input type="checkbox" id="modal" class="hidden">
                         <div class="box-modal">
                             <label for="modal" class="closer">X</label>
@@ -185,7 +205,11 @@
                                 <img src="" alt="">
                             </div>
                         </div>
-                        <a href="https://tjsdk1260.github.io/National-Disaster-and-Safety-Research-Institute/" target="_blank" id="clickBtn">Shortcut</a>
+                        <a href="https://tjsdk1260.github.io/National-Disaster-and-Safety-Research-Institute/" target="_blank" id="clickBtn">사이트 바로가기</a>
+                        <div class="tool">
+                            Illustrator, Visual Stoudio Code
+                        </div>
+                        <div>참여도 100%</div>
                         <p class="introduce">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex incidunt eos similique aspernatur esse fugit ea doloribus error architecto voluptas quisquam quasi, natus culpa voluptate ut neque itaque mollitia? Vel?
                             기존 노후된 사이트를 리 디자인 하였습니다. 반응형으로 제작되었습니다.
