--- a/index.html
+++ b/index.html
@@ -144,16 +144,16 @@
                     <div class="portfolio-content">
                         <a href="https://tjsdk1260.github.io/arcteryx/" target="_blank" id="clickBtn">사이트 바로가기</a>
                         <div class="tool">
-                            Illustrator, Visual Stoudio Code
+                            Html, Css, Javascript
                         </div>
                         <div>참여도 100%</div>
                         <p class="introduce">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex incidunt eos similique aspernatur esse fugit ea doloribus error architecto voluptas quisquam quasi, natus culpa voluptate ut neque itaque mollitia? Vel?
-                            적응형으로 제작하였습니다.
+                            기존 사이트 모바일버전에서 메뉴가 보기 좀 힘들었던 부분을 사용자가 좀 더 쉽게 알아볼수 있도록 개선하였습니다. 
+                            적응형 모바일용으로 제작하였습니다.
                         </p>
                     </div>
                     <div class="mockup">
-                        <img src="" alt="">
+                        <img src="./image/아크테릭스 목업.png" alt="아크테릭스_모바일화면">
                     </div>
                 </article>
                 <article class="nonfiction">
@@ -171,12 +171,12 @@
                         <div class="box-modal">
                             <label for="modal" class="closer">X</label>
                             <div class="storyboard">
-                                <img src="" alt="">
+                                <img src="./image/nonfiction 스토리 보드.jpg" alt="논픽션 스토리보드">
                             </div>
                         </div>
                         <a href="https://tjsdk1260.github.io/Nonfiction/" target="_blank" id="clickBtn">사이트 바로가기</a>
                         <div class="tool">
-                            Illustrator, Visual Stoudio Code
+                            Html, Css, Jquery, Javascript
                         </div>
                         <div>참여도 100%</div>
                         <p class="introduce">
@@ -184,7 +184,11 @@
                         </p>
                     </div>
                     <div class="mockup">
-                        <img src="" alt="">
+                        <div class="version">
+                            <div>pc</div>
+                            <div>mobile</div>
+                        </div>
+                        <img src="./image/nonfiction pc.jpg" alt="nonfiction_pc">
                     </div>
                 </article>
                 <article class="national">
@@ -202,12 +206,12 @@
                         <div class="box-modal">
                             <label for="modal" class="closer">X</label>
                             <div class="storyboard">
-                                <img src="" alt="">
+                                <img src="./image/국립재난안전연구원 스토리보드.jpg" alt="국립재난안전연구원_스토리보드">
                             </div>
                         </div>
                         <a href="https://tjsdk1260.github.io/National-Disaster-and-Safety-Research-Institute/" target="_blank" id="clickBtn">사이트 바로가기</a>
                         <div class="tool">
-                            Illustrator, Visual Stoudio Code
+                            Html, Css, Javascript
                         </div>
                         <div>참여도 100%</div>
                         <p class="introduce">
